# aap-dependency-analyzer

./: .env.example  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Containerfile.web  LICENSE-COMMERCIAL.md  PRICING.md  README.md  SECURITY.md  docker-compose.yml  extract.sh  podman-compose.yml  pyproject.toml  test_push.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: security-scan.yml
docs/: licensing-guide.md
examples/: .env.example
src/aap_migration_planner/: __init__.py
src/aap_migration_planner/analysis/: __init__.py  analyzer.py  quality.py
src/aap_migration_planner/cli/: __init__.py  main.py
src/aap_migration_planner/client/: __init__.py  aap_client.py  base_client.py
src/aap_migration_planner/config/: __init__.py  config.py
src/aap_migration_planner/database/: __init__.py  models.py  service.py
src/aap_migration_planner/reporting/: html_report.py  text_report.py
src/aap_migration_planner/sizing/: __init__.py  calculator.py
src/aap_migration_planner/utils/: retry.py
tests/: __init__.py  test_https_security.py
web/: README.md  app.py
web/components/: graph.py  metrics.py  phase_timeline.py
web/pages/: 1_🔍_Analysis.py  2_📋_Migration_Plan.py  4_📦_Resources.py  5_📏_Sizing_Guide.py
web/pages.backup/: 3_📊_Dashboard.py  5_📏_Sizing_Guide.py
web/utils/: __init__.py  data_loader.py  session.py
