[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aap-migration-planner"
version = "0.1.0"
description = "Migration planning and dependency analysis tool for Ansible Automation Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Arnav Bhati", email = "arnav.bhati@redhat.com"}
]
keywords = ["ansible", "aap", "automation", "migration", "planning", "analysis", "dependencies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
aap-planner = "aap_migration_planner.cli.main:cli"

[project.urls]
Homepage = "https://github.com/arnav3000/aap-migration-planner"
Documentation = "https://github.com/arnav3000/aap-migration-planner/blob/main/docs"
Repository = "https://github.com/arnav3000/aap-migration-planner"
"Issue Tracker" = "https://github.com/arnav3000/aap-migration-planner/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# HTML report has long embedded HTML/JS strings
"src/aap_migration_planner/reporting/html_report.py" = ["E501"]
# Web UI has long user-facing message strings
"web/app.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used in tests
